objects/ASI_CRM_Sub_Brand_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central Region</fullName>
                </value>
                <value>
                    <fullName>North Region</fullName>
                </value>
                <value>
                    <fullName>South Region</fullName>
                </value>
                <value>
                    <fullName>East Region</fullName>
                </value>
                <value>
                    <fullName>South West Region</fullName>
                </value>
                <value>
                    <fullName>North West Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CR12_Conversion_Factor__c</fullName>
        <label>CR12 Extra Conversion Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Sub-Brand Lines</relationshipLabel>
        <relationshipName>ASI_CRM_CR12_Factors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sub-Brand Line</label>
    <nameField>
        <displayFormat>CR12-{000000}</displayFormat>
        <label>Sub-Brand Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub-Brand Lines</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sub_Brand_Line</fullName>
        <active>true</active>
        <label>CN Sub-Brand Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>